# wot_api

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 17524fad85af_create_tables.py  c24301dae258_add_cascade_ondelete.py  d4d543a2006e_init_tables.py  ef0ff669d9be_init_tables.py
src/: database.py  main.py
src/api/scraping/: config.py  parser.py  router.py  wot_data_scraper.py
src/api/tanks/: models.py  queries.py  router.py  schemas.py  utils.py
src/api/tanks/endpoints/: gun.py  tank.py
src/scraping/: config.py  parser.py  router.py  wot_data_scraper.py
src/tanks/: models.py  queries.py  router.py  schemas.py
src/web/static/: styles.css
src/web/tanks/: filter.py  router.py
src/web/templates/: tank.html  tank_info.html  tank_list.html
